# opengl-p1-art-gallery

./: .gitignore  README.md  ui.afdesign
final-project/: final-project.sln  final-project.vcxproj  final-project.vcxproj.filters  main.cpp  math3d.hpp  shader.hpp
game/: .clangd  game.vcxproj  game.vcxproj.filters
game/src/: .clangd  box.hpp  camera.hpp  game.cpp  gbufffer.hpp  math3d.hpp  model.hpp  plane.hpp  shader.hpp  texture.hpp
lab10/: aframe_mindar_part1.html  aframe_mindar_part2.html  week10_naphong_austin.html
lab10/Assets/: human-orc-targets.mind
lab3/box/: Lab3_box.cpp  box.vcxproj.filters
lab3/hello-triangle/: default_shader.vert  hello-triangle.vcxproj.filters
lab3/naphong/: Lab3_box.cpp  Lab3_pyramid.cpp
lab3/pyramid/: mylib.h  pyramid.vcxproj
lab3/sphere/: sphere.vcxproj
lab4/box/: Lab4_box.cpp  box.vcxproj  box.vcxproj.filters  default_fill_shader.frag  default_line_shader.frag  default_point_shader.frag  default_shader.vert  mylib.h
lab4/naphong/: CMakeLists.txt
lab4/naphong/dependencies/glad/: glad.h
lab4/naphong/src/: Lab4_textured_box.cpp  Lab4_textured_pyramid.cpp  Lab4_textured_sphere.cpp  config.cpp  glad.c  material.cpp  material.h
lab4/pyramid/: Lab4_pyramid.cpp  default_fill_shader.frag  default_shader.vert  mylib.h  pyramid.vcxproj  pyramid.vcxproj.filters
lab4/sphere/: Lab3_sphere.cpp  default_fill_shader.frag  default_line_shader.frag  mylib.h  (+3 more)
lab9/: line_drawing.html  marker_tester.html  triangle_drawing.html
naphong/: Lab3_sphere.cpp
proj2/: README.md  index.html
project-hw-2/: project-hw-2.sln
(+65 files in other folders)
